styles/touhou.css
/* ... */
.results
{
    font-size: 2.5em;
}

.contest
{
    display: none;
}

.stats
{
	width: 800px;
	
    overflow-x: hidden;
    overflow-y: auto;

    margin: 20px;

    text-transform: none;
}

#restart
{
    font-size: 2.4em;

    display: none;

    margin: 20px;
    padding: 30px;

    color: white;
    border: none;
    background: #333;
}
.stats .image
{
    position: relative;

    display: inline;

    height: calc(400px / 3);
    margin: 5px;

    -webkit-transition: .3s ease;
            transition: .3s ease;

    border-radius: 5px;
    background: white;
    box-shadow: 0 0 5px rgba(0,0,0,.3);
}
.stats .solved
{
    box-shadow: 0 0 10px green, 0 0 10px green;
}
.stats .skipped
{
    opacity: .7;
}
.wrapper:hover .image
{

    -webkit-transform: scale(1.2);
            transform: scale(1.2);

    opacity: 1;
}
.wrapper
{
	position: relative;
	
    font-size: 20px;

    display: inline-block;

    cursor: pointer;
    -webkit-transform: translateZ(0);

    -webkit-font-smoothing: antialiased;
}

.wrapper .tooltip
{
	pointer-events: none;
	
    position: absolute;
    z-index: 9999;
    left: 50%;

    display: block;
    overflow: hidden;

    margin-bottom: 15px;
    padding: 5px;

    -webkit-transition: all .25s ease-out;
            transition: all .25s ease-out;
    -webkit-transform: translate(-50%,-180px);
            transform: translate(-50%,-180px);
    vertical-align: middle;
    white-space: nowrap;

    opacity: 0;
    color: black;
    border-radius: 10px;
    background: white;
    box-shadow: 0 0 1px rgba(0,0,0,.3);
}
.wrapper:hover {
	z-index: 999;
}
.wrapper:hover  .tooltip
{
	pointer-events: auto;
	
    -webkit-transform: translate(-50%,-180px);
            transform: translate(-50%,-180px);

    opacity: 1;
}

.solved + .tooltip {
    background: green;
    color: white;
}

.lte8 .wrapper .tooltip
{
    display: none;
}

.lte8 .wrapper:hover .tooltip
{
    display: block;
}

